// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: SendingDomainSection should render Left section 1`] = `
<Grid.Column
  lg={5}
  xs={12}
>
  <div
    className="Left"
  >
    Bill
    Brasky
  </div>
</Grid.Column>
`;

exports[`Component: SendingDomainSection should render Right section 1`] = `
<Grid.Column
  lg={7}
  xs={12}
>
  <div
    className="Right"
  >
    Bill
    Brasky
  </div>
</Grid.Column>
`;

exports[`Component: SendingDomainSection should render sending domain section 1`] = `
<div
  className="SendingDomainSection"
>
  <hr
    className="Hr"
  />
  <h3>
    Title
  </h3>
  <Grid>
    Bill
    Brasky
  </Grid>
</div>
`;
